# VMDetect

./: CMakeLists.txt  README.md
src/: common.h  cpuid.asm  main.c  vendors.c
src/vendors/: qemu.h  vbox.h  vmware.h  wsl.h
